# contexter

./: .gitignore  README.md  hook-main.py  main.py  main.spec  pyproject.toml  requirements.txt  settings.json
src/: __init__.py
src/models/: file_list_item.py
src/ui/: __init__.py  drop_zone.py  file_drop_app.py  file_manager.py  settings_panel.py  theme_manager.py
src/utils/: __init__.py  file_operations.py  file_system_worker.py  gitignore.py  settings_manager.py  token_counter.py
