[project]
name = "contexter"
version = "1.0.0"
description = "A simple tool to help prepare code for LLMs with drag-and-drop, file filtering, and token counting"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Contexter Team", email = "contact@contexter.dev"}
]
license = {text = "MIT"}
keywords = ["llm", "code", "preparation", "clipboard", "token-counting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "pathspec>=0.12.1",
    "pyinstaller>=6.12.0",
    "tiktoken>=0.9.0",
    "PyQt6>=6.7.1",
]

[project.urls]
Homepage = "https://github.com/dasun-sathsara/contexter"
Repository = "https://github.com/dasun-sathsara/contexter"
Issues = "https://github.com/dasun-sathsara/contexter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
